feat: faq and og data

--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AtomOne Staking</title>
+    <title>AtomOne Staking Portal</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1c1c1c" />
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="theme-color" content="#000000" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@_atomone" />
+    <meta name="twitter:title" content="AtomOne Staking Portal" />
+    <meta property="og:site_name" content="AtomOne Staking Portal" />
+    <meta
+      property="og:title"
+      content="AtomOne Staking Portal"
+    />
+    <meta
+      property="og:description"
+      content="Platform facilitating web-based management of tokens (or stake) delegation, re-delegation, un-delegation operations and claiming of rewards on the AtomOne chain."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://staking.atom.one/" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <meta property="og:image" content="https://staking.atom.one/OG.png" />
   </head>
   <body>
     <div id="app"></div>
